--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,15 @@
-body {
+@import url('https://fonts.cdnfonts.com/css/tasa-explorer');
+
+body, html {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient( 100% 100% at 100% 0%, #33b2d6 0%, #0e24ce 100% );
+
+  /* background-image: radial-gradient(circle at 85.36% -11.24%, #ffd561 0, #ffc764 10%, #ffb767 20%, #ffa669 30%, #ff9569 40%, #f68368 50%, #e17266 60%, #cd6564 70%, #bc5a63 80%, #ad5162 90%, #a04b62 100%); */
+  background-size: 100vw 180vh;
+  background-repeat: no-repeat;
+  
 }
 
 code {
