--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -1,4 +1,7 @@
 .mainContainer{
+    border: 2px solid red;
+    width: 100%;
+    height: 10vh;
     display: flex;
     justify-content: space-around;
     padding: 13px;
