--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -1,5 +1,5 @@
 .mainContainer{
-    border: 2px solid red;
+    /* border: 2px solid red; */
     width: 100%;
     height: 10vh;
     display: flex;
