--- a/client/src/views/Landing/Landing.module.css
+++ b/client/src/views/Landing/Landing.module.css
@@ -92,7 +92,7 @@ body{
     }
 
     .leftDiv{
-        border: 1px solid black;
+        /* border: 1px solid black; */
         width: 100%;
         height: 40%;
         display: flex;
