--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -7,7 +7,7 @@
     padding: 13px;
 }
 
-.mainContainer button{
+.buttonBar{
     font-family: 'TASA Explorer', sans-serif;
     font-size: 15px;
     display: inline-block;
@@ -25,7 +25,7 @@
     transition: box-shadow 0.15s ease, transform 0.15s ease;
 }
       
-.mainContainer button:hover {
+.buttonBar:hover {
     box-shadow: 0px 0.1em 0.2em rgb(45 35 66 / 40%), 0px 0.4em 0.7em -0.1em rgb(45 35 66 / 30%), inset 0px -0.1em 0px #3c4fe0;
     transform: translateY(-0.2em);
 }
@@ -36,3 +36,14 @@
 }
 
 
+@media (min-width: 371px) and (max-width: 767px){
+    .mainContainer{
+        border: 1px solid red;
+    }
+
+    .mainContainer button{
+        font-size: 10px;
+    }
+
+    
+}
