--- a/client/src/components/SearchBar/SearchBar.module.css
+++ b/client/src/components/SearchBar/SearchBar.module.css
@@ -25,8 +25,10 @@
     position: relative;
     right: 40px;
     font-size: 20px;
+    transition: .2s;
     &:hover{
-        
+        transform: scale(0.98);
+        transition: .3s;
     }
 }
 
@@ -37,9 +39,8 @@
         width: 100px;
         height: 10px;
     }
-    .buttonBar {
-        font-size: small;
-        height: 10px;
+    .searchBtn{
+        right: 30px;
+    }
 
     }
-}
