--- a/client/src/views/Detail/Detail.module.css
+++ b/client/src/views/Detail/Detail.module.css
@@ -53,6 +53,10 @@
     font-size: 25px;
 }
 
+.info{
+    /* border: 1px solid black; */
+    height: fit-content;
+}
 
 /* _________ANIMATIONS__________________ */
 
@@ -64,5 +68,46 @@
     100%{
       transform: translateY(0);
       opacity: 1;
+    }
+  }
+
+  @media (min-width: 371px) and (max-width: 767px){
+    .detailContainer{
+        flex-direction: column;
+    }
+
+    .divLeft{
+        width: 350px;
+        height: 250px;
+        border-top-right-radius: 12px;
+        border-top-left-radius: 12px;
+        border-bottom-left-radius: 0;
+    }
+
+    .divLeft img{
+        margin-top: 50px;
+    }
+
+    .pokeDetail{
+        width: 350px;
+        height: 320px;
+        border-bottom-left-radius: 12px;
+        border-bottom-right-radius: 12px;
+        border-top-right-radius: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+    }
+
+    .pokeDetail h1{
+        font-size: 20px;
+    }
+
+    .pokeDetail h4{
+        font-size: small;
+    }
+
+    .pokeDetail h4 span{
+        font-size: 15px; 
     }
   }
